--- a/web/css/index.css
+++ b/web/css/index.css
@@ -117,12 +117,9 @@
 
 .slide_info {
   display: flex;
-  position: relative;
-  width: 1442px;
-  height: 817px;
+  width: 100vw;
+  height: 100vh;
   margin: 0 auto;
-  margin-top: 51px;
-  margin-bottom: 100px;
 }
 
 .rectangle_blue {
@@ -382,13 +379,17 @@ footer {
     flex-direction: column;
   }
 
+  .image img {
+    width: 100vw;
+  }
+
   .slide_info .text {
     width: 100vw;
     height: 100%;
   }
 
   .rectangle_blue img {
-    left: 35%;
+    left: 72%;
   }
 
   .rectangle_blue {
@@ -401,15 +402,15 @@ footer {
   }
 
   .lightning {
-    top: 130%;
-    left: 35%;
+    top: 100%;
+    left: 78%;
   }
 
   .group-row {
     display: flex;
     flex-direction: column;
     gap: 5vh;
-    margin-top: 60vh;
+    margin-top: 30vh;
   }
 
   .carousel, .accordion {
